# docker-wasmedge

./: Cargo.toml  Dockerfile.wasmedge  README.md  bench.sh  docker-compose.yml  docker-wasmedge-aot.wasm
src/: main.rs
wasmedge/: Cargo.toml  Dockerfile  Dockerfile.wasmedge  Dockerfile.wasmedge-aot  bench.sh  docker-compose.yml
wasmedge/src/: main.rs
