[package]
name = "docker-wasmedge"
authors = ["Jun Kurihara"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.3.1", default-features = false }
hyper-util = { version = "0.1.5", features = ["full"] }
tokio = { version = "1.38.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "fs",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
hyper_wasi = { version = "0.15.2", features = ["full"] }
tokio_wasi = { version = "1.25.2", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "fs",
] }
