[workspace.package]
version = "0.1.0"
authors = ["Jun Kurihara"]
homepage = "https://github.com/junkurihara/docker-wasmedge"
repository = "https://github.com/junkurihara/docker-wasmedge"
license = "MIT"
readme = "./README.md"
edition = "2021"
publish = false

[workspace]
members = ["wasmedge"]
resolver = "2"

[profile.release]
codegen-units = 1
incremental = false
lto = "fat"
opt-level = 3
panic = "abort"
strip = true
