[package]
name = "docker-wasmedge"
authors = ["Jun Kurihara"]
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
hyper = { version = "1.4.1", default-features = false }
hyper-util = { version = "0.1.6", features = ["full"] }
tokio = { version = "1.38.0", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "fs",
] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
hyper_wasi = { version = "0.15.2", features = ["full"] }
tokio_wasi = { version = "1.25.2", default-features = false, features = [
  "net",
  "rt-multi-thread",
  "time",
  "sync",
  "macros",
  "fs",
] }

# [target.'cfg(target_arch = "wasm32")'.dependencies]
# hyper = { version = "1.4.1", features = ["full"] }
# tokio = { version = "1.39.2", features = [
#   "rt",
#   "macros",
#   "net",
#   "time",
#   "io-util",
# ] }

# [target.'cfg(target_arch = "wasm32")'.patch.crates-io]
# tokio = { git = "https://github.com/second-state/wasi_tokio.git", branch = "v1.36.x" }
# socket2 = { git = "https://github.com/second-state/socket2.git", branch = "v0.5.x" }
# hyper = { git = "https://github.com/second-state/wasi_hyper.git", branch = "v0.14.x" }
